<resources>
    <string name="app_name">LayoutProto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line">--------------------------------------------------------------------------------------------------</string>
    <string name="new_text">신규 : </string>
    <string name="def">0</string>
    <string name="change_text">교환 :</string>
    <string name="quest_text">문의 :</string>
    <string name="cancel_text">취소 :</string>
    <string name="order_text">주문현황</string>
    <string name="gong_text">공지사항</string>
    <string name="qna_text"><![CDATA[Q & A]]></string>
    <string name="user_text">회원관리</string>
    <string name="setting_text">설정</string>
    <string name="plus">추가</string>
    <string name="seeall">전체보기</string>

</resources>
