<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".item_status">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus_b"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/seeall"
                android:textSize="10sp" />

            <Button
                android:id="@+id/naver_b"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/naver" />

            <Button
                android:id="@+id/street_b"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/street_icon" />

            <Button
                android:id="@+id/auction_b"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/auction" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/new_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/new_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/change_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/change_text_count_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/quest_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quest_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/cancel_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:text="@string/line" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>